# CAD-to-CFD-Agent-for-Solid-Liquid-Two-Phase-Flow-Dynamics

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  ZIP_README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  workflow_request.yml
.github/workflows/: ci.yml  lint.yml
configs/codex/: fluent_solver_mcp_config.example.toml  nx_mcp_config.example.toml  postprocessing_mcp_config.example.toml  skills_config.example.toml  (+1 more)
cpp/: README.md
docs/: AGENT_BENCHMARK_LADDER_REPLAN_20260628.md  DEWAXING_AGENT_GITHUB_RESTRUCTURE_HANDOFF_20260628.md  DEWAXING_FASTFLUENT_TO_FLUENT_ASSET_INVENTORY_20260628.md  FASTFLUENT_DEWAXING_NATIVE_SOLVER_PROGRESS_20260627.md  FASTFLUENT_HORIZONTAL_H1_DELIVERY_20260622.md  FASTFLUENT_HORIZONTAL_H1_EVIDENCE_ADAPTER_INVENTORY_20260622.md  FASTFLUENT_HORIZONTAL_H1_EXISTING_PATCH_COMPILER_GOAL_20260622.md  FASTFLUENT_HORIZONTAL_H1_PROGRESS_20260622.md  FASTFLUENT_HORIZONTAL_H2_STEAM_AIR_CONDENSATION_V2_DELIVERY_20260623.md  FASTFLUENT_HORIZONTAL_H2_STEAM_AIR_CONDENSATION_V2_EVIDENCE_ADAPTER_INVENTORY_20260623.md  FASTFLUENT_HORIZONTAL_H2_STEAM_AIR_CONDENSATION_V2_GOAL_20260623.md  FASTFLUENT_HORIZONTAL_H2_STEAM_AIR_CONDENSATION_V2_PROGRESS_20260623.md  FASTFLUENT_HORIZONTAL_H3_5_DELIVERY_20260623.md  FASTFLUENT_HORIZONTAL_H3_5_PROGRESS_20260623.md  FASTFLUENT_HORIZONTAL_H3_5_VALIDATION_PACK_GOAL_20260623.md  FASTFLUENT_HORIZONTAL_H3_DELIVERY_20260623.md  FASTFLUENT_HORIZONTAL_H3_PROGRESS_20260623.md  FASTFLUENT_HORIZONTAL_H3_SOLID_LIQUID_SUSPENSION_GOAL_20260623.md  FASTFLUENT_HORIZONTAL_H4_WAX_RHEOLOGY_PHASE_CHANGE_DELIVERY_20260623.md  FASTFLUENT_HORIZONTAL_H4_WAX_RHEOLOGY_PHASE_CHANGE_GOAL_20260623.md  FASTFLUENT_HORIZONTAL_H4_WAX_RHEOLOGY_PHASE_CHANGE_PROGRESS_20260623.md  FASTFLUENT_OVERNIGHT_DELIVERY_20260622.md  FASTFLUENT_OVERNIGHT_PROGRESS_20260622.md  FASTFLUENT_S1_NATIVE_SIMULATION_DELIVERY_20260623.md  FASTFLUENT_S1_NATIVE_SIMULATION_PROGRESS_20260623.md  FASTFLUENT_S1_NATIVE_SIMULATION_VALIDATION_PACK_GOAL_20260623.md  FASTFLUENT_S2_PRACTICAL_NATIVE_FUNCTION_EXPANSION_DELIVERY_20260623.md  FASTFLUENT_S2_PRACTICAL_NATIVE_FUNCTION_EXPANSION_GOAL_20260623.md  FASTFLUENT_S2_PRACTICAL_NATIVE_FUNCTION_EXPANSION_PROGRESS_20260623.md  FASTFLUENT_S3_PRACTICAL_NATIVE_SETUP_UTILITIES_DELIVERY_20260623.md  FASTFLUENT_S3_PRACTICAL_NATIVE_SETUP_UTILITIES_PROGRESS_20260623.md  FLUENT_SOLVER_PLAN_V2_RECEIVER_DELIVERY_20260622.md  FLUENT_SOLVER_PLAN_V2_RECEIVER_GOAL_20260622.md  FLUENT_SOLVER_PLAN_V2_RECEIVER_PROGRESS_20260622.md  architecture.md  cad_backend.md  index.md  installation.md  public_asset_framework_map.md  references.md  (+4 more)
scripts/: clean_outputs.ps1  install_dev.ps1  run_cylinder_demo.ps1  run_solidworks_preflight.ps1
(+620 files in other folders)
