[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fromcad2cfd"
version = "0.1.0"
description = "An agentic CAD-to-CFD automation framework for solid-liquid two-phase flow dynamics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Project Contributors" }]
keywords = ["cad", "cfd", "solidworks", "fluent", "automation", "agent", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Manufacturing",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pywin32; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
fromcad2cfd = "fromcad2cfd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
