[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fromcad2cfd"
version = "0.2.0"
description = "An agentic CAD-to-CFD automation framework for solid-liquid two-phase flow dynamics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Project Contributors" }]
keywords = ["cad", "cfd", "solidworks", "siemens-nx", "fluent", "automation", "agent", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Manufacturing",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pywin32; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
mcp = ["mcp>=1,<2"]

[project.scripts]
fromcad2cfd = "fromcad2cfd.cli:main"
fromcad2cfd-nx-mcp = "fromcad2cfd_mcp_nx.server:main"
fromcad2cfd-fluent-solver-mcp = "fromcad2cfd_mcp_fluent_solver.server:main"
fromcad2cfd-hypermesh-meshing-mcp = "fromcad2cfd_mcp_hypermesh_meshing.server:main"
fromcad2cfd-post-mcp = "fromcad2cfd_mcp_postprocessing.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
